# layoutOpt

./: BUILD.md  PROJECT_STRUCTURE.md
cpp/: CMakeLists.txt  engine.cpp
docs/: README.md
docs/architecture/: data-flow.md  tech-stack.md
docs/components/: cpp-engine.md  electron-main.md  react-app.md
docs/development/: development-guide.md
docs/features/: features.md
docs/overview/: project-overview.md
electron-app/: index.html  package-lock.json  package.json  vite.config.ts
electron-app/dist-electron/: main.js  preload.mjs
electron-app/electron/: main.ts  preload.ts
electron-app/src/: App.css  App.tsx
electron-app/src/components/: Canvas.tsx  PropertiesPanel.tsx
electron-app/src/store/: useStore.ts
electron-app/src/types/: index.ts
